--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,31 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Frontend privet</title>
-	<link rel="stylesheet" href="/css/milligram.min.css"/>
-	<link rel="stylesheet" href="/css/main.css" />
-	<script src="/libs/technolibs/index.js"></script>
-	<script src="main.js"></script>
+	<meta charset="utf-8">
+	<title></title>
+	<script src="testGame.js" charset="utf-8"></script>
+	<style>
+		.cell {
+			width: 25%;
+			height: 25%;
+			display: inline-block;
+			border: solid 1px;
+			box-sizing: border-box;
+		}
+		.cell0 {
+			background-image: url(a.png);}
+		.cell1 { background-image: url(g.png); }
+		.cell2 {background-image: url(b.png); }
+		#game {
+			text-align: center;
+			font-size: 0;
+		}
+	</style>
 </head>
+
 <body>
-
-	<div id="jsLogin">
-		<h3>Привет, залогинься!</h3>
-
-		<h4>Powered by Travis and Heroku</h4>
-
-		<form onsubmit="onLogin(this); return false;">
-			<input required placeholder="Ваш email" type="email"  name="email" value="" />
-			<input required placeholder="Ваше имя" type="text" name="user" value="" />
-			<button name="name">
-				Привет!
-			</button>
-		</form>
-	</div>
-
-	<div id="jsChat" hidden>
-		<h3 id="jsTitle">Ты в чате, %username%!</h3>
-		<div id="jsMessages" class="chat">
-			<div class="cssload-wrap">
-				<div class="cssload-cssload-spinner"></div>
-			</div>
-		</div>
-		<form onsubmit="onChat(this); return false;">
-			<textarea required class="chat__input" name="message" cols="30" rows="10"></textarea>
-			<button name="name">
-				Отправить
-			</button>
-		</form>
-	</div>
+<div id="game">
+</div>
 </body>
 </html>
