--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<script src="testGame.js" charset="utf-8"></script>
+	<script src="../testGame.js" charset="utf-8"></script>
 	<style>
 		.cell {
 			width: 25%;
