--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 			box-sizing: border-box;
 		}
 		.cell0 {
-			background-image: url(a.png);}
-		.cell1 { background-image: url(g.png); }
-		.cell2 {background-image: url(b.png); }
+			background-image: url(../a.png);}
+		.cell1 { background-image: url(../g.png); }
+		.cell2 {background-image: url(../b.png); }
 		#game {
 			text-align: center;
 			font-size: 0;
