--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<script src="../testGame.js" charset="utf-8"></script>
+	<script src="testGame2.js" charset="utf-8"></script>
 	<style>
 		.cell {
 			width: 25%;
@@ -14,9 +14,9 @@
 			box-sizing: border-box;
 		}
 		.cell0 {
-			background-image: url(../a.png);}
-		.cell1 { background-image: url(../g.png); }
-		.cell2 {background-image: url(../b.png); }
+			background-image: url(a.png);}
+		.cell1 { background-image: url(g.png); }
+		.cell2 {background-image: url(b.png); }
 		#game {
 			text-align: center;
 			font-size: 0;
