--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<script src="testGame2.js" charset="utf-8"></script>
+	<link rel='subresource' href='critical.js'>
 	<style>
 		.cell {
 			width: 25%;
@@ -26,6 +26,8 @@
 
 <body>
 <div id="game">
+	<script src="testGame2.js" charset="utf-8"></script>
+
 </div>
 </body>
 </html>
