--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 </div>
 <div class="js-chat" hidden="hidden">
 </div>
+<div class="js-reg" hidden="hidden">
+</div>
 
 <script src="components/button/button.js"></script>
 <script src="components/form/form.js"></script>
