--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 <div class="js-reg" hidden="hidden">
 </div>
 
+<script src="technolibs.js"></script>
 <script src="components/button/button.js"></script>
 <script src="components/form/form.js"></script>
 <script src="components/chat/chat.js"></script>
 <script src="main.js"></script>
-<script src="/libs/technolibs/index.js"></script>
 
 
 <!--
