Fix pull-request's remarks

--- a/public/index.html
+++ b/public/index.html
@@ -23,17 +23,9 @@
 <script src="components/button/button.js"></script>
 <script src="components/form/form.js"></script>
 <script src="components/chat/chat.js"></script>
-<script src="main.js"></script>
+<script src="form1.js"></script>
+<script src="form2.js"></script>
 
-
-<!--
-<form action="/users" method="post" onsubmit="onSubmit(this); return false;">
-	<input required placeholder="Ваш email" type="email"  name="email" value="" />
-	<input required placeholder="Ваше имя" type="text" name="user" value="" />
-	<button class="button" style="vertical-align:middle" name="name"><span>Login</span>
-	</button>
-</form>
--->
 <noscript><div class="away_wrap page_block">
 	<div ></div>
 	<div >
