--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="game.js" charset="utf-8"></script>
+
+    <script src="modules/pathToRegex.js" charset="utf-8"></script>
+    <script src="modules/view.js" charset="utf-8"></script>
+    <script src="modules/route.js" charset="utf-8"></script>
+    <script src="modules/router.js" charset="utf-8"></script>
+    <!-- <script src="game.js" charset="utf-8"></script> -->
+
+    <script src="components/block/block.js" charset="utf-8"></script>
+    <script src="components/button/button.js" charset="utf-8"></script>
+    <script src="components/form/form.js" charset="utf-8"></script>
+    <script src="/components/form/form.tmpl.js" charset="utf-8"></script>
+
+    <script src="views/singlePlayer.js" charset="utf-8"></script>
+    <script src="views/login.js" charset="utf-8"></script>
+    <script src="main.js" charset="utf-8"></script>
+
+
+
     <link rel="stylesheet" href="style.css" charset="utf-8">
   </head>
   <body>
-    <div id="game"></div><div id="menu">
-      <button type="button" id="newGame">Новая игра</button><br>
-      <label for="stepCount">Ходов сделано: </label>
-      <label id="stepCount">0</label>
-    </div>
+    <div class="container"></div>
   </body>
 </html>
