Added registration view

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="modules/view.js" charset="utf-8"></script>
     <script src="modules/route.js" charset="utf-8"></script>
     <script src="modules/router.js" charset="utf-8"></script>
+    <script src="modules/jsonRequest.js" charset="utf-8"></script>
     <!-- <script src="game.js" charset="utf-8"></script> -->
 
     <script src="components/block/block.js" charset="utf-8"></script>
@@ -16,6 +17,7 @@
     <script src="/components/form/form.tmpl.js" charset="utf-8"></script>
 
     <script src="views/singlePlayer.js" charset="utf-8"></script>
+    <script src="views/register.js" charset="utf-8"></script>
     <script src="views/login.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
 
