--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <title></title>
 
-    <script src="modules/pathToRegex.js" charset="utf-8"></script>
-    <script src="modules/view.js" charset="utf-8"></script>
-    <script src="modules/route.js" charset="utf-8"></script>
-    <script src="modules/router.js" charset="utf-8"></script>
-    <script src="modules/jsonRequest.js" charset="utf-8"></script>
-    <!-- <script src="game.js" charset="utf-8"></script> -->
+  <script src="modules/pathToRegex.js" charset="utf-8"></script>
+  <script src="modules/view.js" charset="utf-8"></script>
+  <script src="modules/route.js" charset="utf-8"></script>
+  <script src="modules/router.js" charset="utf-8"></script>
+  <script src="modules/jsonRequest.js" charset="utf-8"></script>
+  <!-- <script src="game.js" charset="utf-8"></script> -->
 
-    <script src="components/block/block.js" charset="utf-8"></script>
-    <script src="components/button/button.js" charset="utf-8"></script>
-    <script src="components/form/form.js" charset="utf-8"></script>
-    <script src="/components/form/form.tmpl.js" charset="utf-8"></script>
+  <script src="components/block/block.js" charset="utf-8"></script>
+  <script src="components/button/button.js" charset="utf-8"></script>
+  <script src="components/form/form.js" charset="utf-8"></script>
+  <script src="/components/form/form.tmpl.js" charset="utf-8"></script>
 
-    <script src="views/singlePlayer.js" charset="utf-8"></script>
-    <script src="views/register.js" charset="utf-8"></script>
-    <script src="views/login.js" charset="utf-8"></script>
-    <script src="main.js" charset="utf-8"></script>
+  <script src="views/singlePlayer.js" charset="utf-8"></script>
+  <script src="views/register.js" charset="utf-8"></script>
+  <script src="views/login.js" charset="utf-8"></script>
+  <script src="bundle1.js" charset="utf-8"></script>
 
 
 
-    <link rel="stylesheet" href="style.css" charset="utf-8">
-  </head>
-  <body>
-    <div class="container"></div>
-  </body>
+  <link rel="stylesheet" href="style.css" charset="utf-8">
+</head>
+<body>
+<div class="container"></div>
+</body>
 </html>
