--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,14 @@
     <script src="views/singlePlayer.js" charset="utf-8"></script>
     <script src="views/register.js" charset="utf-8"></script>
     <script src="views/login.js" charset="utf-8"></script>
+    <script src="views/mainMenu.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
 
 
 
     <link rel="stylesheet" href="style.css" charset="utf-8">
+    <link rel="stylesheet" href="css/menu.css" charset="utf-8">
+    <link rel="stylesheet" href="components/button/button.css" charset="utf-8">
   </head>
   <body>
     <div class="container"></div>
