--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <meta charset="utf-8">
   <title></title>
 
@@ -11,12 +12,19 @@
   <script src="build/login.js" charset="utf-8"></script>
   <script src="build/main.js" charset="utf-8"></script>
 
+  <link rel="stylesheet" href="css/bootstrap-social.css" charset="utf-8">
+  <link rel="stylesheet" href="css/bootstrap.css" charset="utf-8">
   <link rel="stylesheet" href="style.css" charset="utf-8">
   <link rel="stylesheet" href="css/menu.css" charset="utf-8">
   <link rel="stylesheet" href="components/button/button.css" charset="utf-8">
-  </head>
+
+  <link rel="stylesheet" href="css/form.css" charset="utf-8">
+
+
+</head>
 
   <body>
+
     <div class="container"></div>
   </body>
 </html>
