--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
   <script src="build/register.js" charset="utf-8"></script>
   <script src="build/login.js" charset="utf-8"></script>
   <script src="build/main.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/soc/bootstrap-social.css">
+  <link rel="stylesheet" href="/soc/assets/css/font-awesome.css">
 
-  <link rel="stylesheet" href="css/bootstrap-social.css" charset="utf-8">
-  <link rel="stylesheet" href="css/bootstrap.css" charset="utf-8">
   <link rel="stylesheet" href="style.css" charset="utf-8">
   <link rel="stylesheet" href="css/menu.css" charset="utf-8">
   <link rel="stylesheet" href="components/button/button.css" charset="utf-8">
@@ -24,7 +25,13 @@
 </head>
 
   <body>
-
+  <a class="btn btn-block btn-social btn-twitter">
+    <span class="fa fa-twitter"></span>
+    Sign in with Twitter
+  </a>
+  <a class="btn btn-social-icon btn-twitter">
+    <span class="fa fa-twitter"></span>
+  </a>
     <div class="container"></div>
   </body>
 </html>
