beta mainMenu page

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title></title>
 
     <script src="components/form/form.tmpl.js" charset="utf-8"></script>
+    <script src="components/form/form_reg.tmpl.js" charset="utf-8"></script>
+    <script src="components/menu/menu.tmpl.js" charset="utf-8"></script>
 
     <script src="build/singlePlayer.js" charset="utf-8"></script>
     <script src="build/register.js" charset="utf-8"></script>
@@ -18,6 +20,7 @@
     <link rel="stylesheet" href="style.css" charset="utf-8">
     <link rel="stylesheet" href="css/menu.css" charset="utf-8">
     <link rel="stylesheet" href="components/button/button.css" charset="utf-8">
+    <link rel="stylesheet" href="components/link/link.css" charset="utf-8">
 
     <link rel="stylesheet" href="css/form.css" charset="utf-8">
 
