Added gameField and gameFieldCell components

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,17 @@
     <script src="build/register.js" charset="utf-8"></script>
     <script src="build/login.js" charset="utf-8"></script>
     <script src="build/main.js" charset="utf-8"></script>
+    <!--
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/soc/bootstrap-social.css">
     <link rel="stylesheet" href="/soc/assets/css/font-awesome.css">
+  -->
 
     <link rel="stylesheet" href="style.css" charset="utf-8">
     <link rel="stylesheet" href="css/menu.css" charset="utf-8">
     <link rel="stylesheet" href="components/button/button.css" charset="utf-8">
+    <link rel="stylesheet" href="components/gameField/gameField.css" charset="utf-8">
+    <link rel="stylesheet" href="components/gameFieldCell/gameFieldCell.css" charset="utf-8">
 
     <link rel="stylesheet" href="css/form.css" charset="utf-8">
 
@@ -26,6 +30,6 @@
 
 <body>
 
-<div class="container"></div>
+<div class="content_container"></div>
 </body>
 </html>
