add prototype of scoreboard

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,13 @@
     <script src="components/form/form.tmpl.js" charset="utf-8"></script>
     <script src="components/form/form_reg.tmpl.js" charset="utf-8"></script>
     <script src="components/menu/menu.tmpl.js" charset="utf-8"></script>
+    <script src="components/scoreboard/scoreboard.tmpl.js" charset="utf-8"></script>
 
     <script src="build/singlePlayer.js" charset="utf-8"></script>
     <script src="build/register.js" charset="utf-8"></script>
     <script src="build/login.js" charset="utf-8"></script>
     <script src="build/main.js" charset="utf-8"></script>
+    <script src="build/scoreboard.js" charset="utf-8"></script>
     <!--вебшторм показывает, что их нет, но на самом деле они есть-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/soc/bootstrap-social.css">
