--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="components/gameField/gameField.css" charset="utf-8">
     <link rel="stylesheet" href="components/gameFieldCell/gameFieldCell.css" charset="utf-8">
     <link rel="stylesheet" href="components/link/link.css" charset="utf-8">
+    <link rel="stylesheet" href="components/scoreboard/scoreboard.css" charset="utf-8">
 
 </head>
 
